# flow-arrow

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: benchmarks.yml  ci.yml  pages.yml
benches/: README.md  gpu_accumulator.rs  matrix.rs  vector.rs
docs/: backend.md  compiler-architecture-review.md  faults.md  formatting.md  overview.md  syntax.md
docs/std/: README.md  bytes.md  cli.md  cv.md  fault.md  fs.md  http.md  int.md  io.md  math.md  matrix.md  predicates.md  quant.md  real.md  seq.md  sqlite.md  stream.md  tuple.md  vector.md
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
examples/: README.md
examples/99-bottles/: README.md  main.flow
examples/add-numbers-from-args/: README.md  main.flow
examples/add-numbers-from-stdin/: README.md  main.flow
examples/c-interop/: README.md  main.flow  native_math.c  native_math.h
examples/c-library/: README.md  app.c  stats.flow
examples/concurrency/: README.md  main.flow
src/: ast.rs  build.rs  codegen.rs  diagnostic.rs  fmt.rs  lexer.rs  lib.rs  llvm_backend.rs  lsp.rs  main.rs  mermaid.rs  module_resolver.rs  monomorphize.rs  node_ref.rs  parser.rs  runtime.rs  stdlib.rs  typecheck.rs  types.rs  wasm_api.rs
static/: flowarrow.wasm  index.html
tests/: cli_build.rs  cli_fmt.rs  local_imports.rs  static_examples.rs  std_bytes.rs  std_cli.rs  std_cv.rs  std_fault.rs  std_flow_source.rs  std_fs.rs  std_http.rs  std_int.rs  std_intrinsic.rs  std_io.rs  std_math.rs  std_predicates.rs  std_real.rs  std_seq.rs  std_sqlite.rs  std_stream.rs
(+118 files in other folders)
