[package]
name = "flowarrow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inkwell = { version = "0.9.0", features = ["llvm22-1", "target-webassembly"] }

[[bench]]
name = "vector"
harness = false

[[bench]]
name = "matrix"
harness = false
